// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders large label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-0:disabled {
  color: #C0C0C0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.43125em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.43125em;
}

<label
    class="emotion-0"
  >
    A Label
  </label>
</DocumentFragment>
`;

exports[`Label renders medium label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-0:disabled {
  color: #C0C0C0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<label
    class="emotion-0"
  >
    A Label
  </label>
</DocumentFragment>
`;

exports[`Label renders small label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-0:disabled {
  color: #C0C0C0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.5145833333333334em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5145833333333334em;
}

<label
    class="emotion-0"
  >
    A Label
  </label>
</DocumentFragment>
`;

exports[`Label should render disabled Label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  color: #C0C0C0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<label
    aria-disabled="true"
    class="emotion-0"
  >
    Label
  </label>
</DocumentFragment>
`;
